--- a/src/app/checkout/checkout.page.scss
+++ b/src/app/checkout/checkout.page.scss
@@ -15,3 +15,18 @@
 .text-8{
     font-size: 10px !important;
 }
+
+.btn-primary{
+    background-color: black;
+    border: none;
+}
+
+.border-none{
+    border: none
+}
+
+.warning{
+    background-color: #D22E1C !important;
+    
+}
+
